# cerebellar-models

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  50_50_mouse.json  CHANGELOG.md  Create_Mouse_lingulaV4_in_json.py  JSONread.py  MouseCerebellum.json  MouseCerebellumNest.json  README.md  README_STDP.txt  UbcMouseCerebellumNest.json  atlas_cerebellum.json  atlas_local.py  cerebellum-io.yaml  cerebellum.json  cerebellum.yaml  cerebellum_placement.py  codecov.yml  codemeta.json  complete_postprocess_connectivity.py  compute_results.py  compute_results_new.py  config_v4.json  connectivity_after.json  create_mr.py  demo_geeno.py  demo_mf_dcn.py  demo_pf_mli.py  example.py  grazie_mary.py  human_cerebellum.json  human_reconstruction.json  human_v3.json  human_v4.json  job.sh  mapped_placement.py  morphologies.hdf5  mouse_cerebellum_Z+_reconstruction.json  mouse_lingulaV4.json  (+20 more)
.github/: pull_request_template.md
.github/devops/: install-nest.sh
.github/workflows/: black.yml  branch.yml  docs.yml  integration.yml  isort.yml  pull_request.yml  test.yml
AMPA_NMDA_GABA_tuning/NEURON_traces/: AMPA_BC_SC_GoC.csv  NMDA_BC_SC_GoC.csv
AMPA_NMDA_GABA_tuning/single_cell_test/: ampa_fit.py  multi_obj_opt.py  neuron_traces.py  nmda_fit.py  opt_BC_GABA.py  opt_GoC_GABA.py  opt_GoC_Grc_GABA.py  opt_SC_BC_PC_GABA.py  opt_SC_GABA.py  opt_aa_GoC_AMPA.py  opt_aa_pf_PC_AMPA.py  opt_mf_GoC_AMPA.py  opt_mf_GoC_NMDA.py  opt_mf_GrC_AMPA.py  opt_mf_GrC_NMDA.py  opt_pf_BC_AMPA.py  opt_pf_BC_NMDA.py  opt_pf_GoC_AMPA.py  opt_pf_SC_AMPA.py  opt_pf_SC_NMDA.py  optimization.py  optimization_AMPA.py  optimization_NMDA.py  show_neuron_traces.py  test_GrC_multiple_spikes.py  test_Grc_1spike.py  test_g_init.py  test_grc_AMPA&NMDA.py  test_grc_AMPA.py  test_grc_NMDA.py  test_grc_NMDA_clamp.py  test_mg_block.py
cerebellar_models/: __init__.py
cerebellum/: JSONread.py  __init__.py  asearch.py  brain_atlas_processor.py  brain_regions_tree.py  cerebellum_processor.py  cli.py  compute_results.py  connectome.py  corrections.py  exceptions.py  helpers.py  helpers_bsb.py  mapped_placement.py  mouse_lingula_neuron.json  ontology_tree.py  placement.py  selector.py  utils.py
cerebellum/analysis/: __init__.py  plots.py  report.py  simulation_results.py  spiking_results.py  structure_analysis.py
cerebellum/config_data/: old_regions.json
cerebellum/connectome/: NCDCN_gly_golgi.py  NCDCN_golgi.py  NCDCN_granule.py  __init__.py  aa_purkinje.py  basket_purkinje.py  bcsc_purkinje.py  gap_junctions.py  glomerulus_golgi.py  glomerulus_golgi_old.py  glomerulus_granule.py  glomerulus_mf_to_ubc.py  glomerulus_ubc.py  glomerulus_ubc_to_ubc.py  golgi_glomerulus.py  golgi_glomerulus_granule.py  golgi_glomerulus_ubc.py  golgi_granule.py  granule_golgi.py  granule_voxel_intersect.py  io_molecular.py  io_purkinje.py  mossy_dcn.py  mossy_dcnp.py  mossy_glomerulus (copia).py  mossy_glomerulus.py  multi_contact.py  pf_interneuron.py  pf_purkinje.py  presyn_dist_strat.py  purkinje_dcn.py  satellite.py  to_glomerulus.py  ubc_glomerulus.py
cerebellum/helper_mixins/: bap_abstract.py  bap_cerebellum_mixins.py  brt_JSONread_mixins.py
cerebellum/models/: Basket.py  Golgi.py  GranuleKO.py  GranuleWT.py  Purkinje.py  Stellate.py
cerebellum/nest_models/: build_models.py  eglif_cond_alpha_multisyn.nestml  eglif_cond_alpha_multisyn_AMPA_NMDA.nestml  eglif_cond_alpha_multisyn_AMPA_NMDA_UPDATED.nestml  eglif_cond_alpha_multisyn_mod.nestml  eglif_multisyn_AMPA_NMDA_GABA.nestml
cerebellum/other_nest_models/: build_models.py  stdp_connection_cosexp.nestml
cerebellum/placement/: bender_generator.py  binary_distributor.py  dcn_placement.py  io_placement.py  morphology_bender.py  placement.py  post.py  (+1 more)
config/: atlas_cerebellum.json  brain_regions.json  cerebellum.json
configurations/: PC_Ie_tuning.xlsx  README.md  mouse_cerebellum_Z+.json  mouse_cerebellum_Z-.json
custom_stdp/: CMakeLists.txt  basic_neuron_nestml.cpp  basic_neuron_nestml.h  custom_stdp_module.cpp  diff_neuron_nestml.cpp  diff_neuron_nestml.h  eglif_cond_alpha_multisyn.cpp  eglif_cond_alpha_multisyn.h  eglif_dcnp.cpp  eglif_dcnp.h  eglif_gr_nestml.cpp  eglif_gr_nestml.h  eglif_io_nestml.cpp  eglif_io_nestml.h  eglif_mli.cpp  eglif_mli.h  eglif_pc_nestml.cpp  eglif_pc_nestml.h  extended_hist_entry.cpp  extended_hist_entry.h  extended_post_history_archiving_node.cpp  extended_post_history_archiving_node.h  iaf_cond_alpha_neuron_nestml.cpp  iaf_cond_alpha_neuron_nestml.h  rb_neuron_nestml.cpp  rb_neuron_nestml.h  state_neuron_nestml.cpp  state_neuron_nestml.h  stdp_synapse_alpha.cpp  stdp_synapse_alpha.h  stdp_synapse_cosexp.cpp  stdp_synapse_cosexp.h  stdp_synapse_sinexp.cpp  stdp_synapse_sinexp.h  tracking_neuron_nestml.cpp  tracking_neuron_nestml.h  tracking_neuron_planner_nestml.cpp  tracking_neuron_planner_nestml.h
custom_stdp_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
devops/: run.sh  setup.md  setup.sh  test.sh
docs/: cli.rst  conf.py  connection-strategies.rst  index.rst  modules.rst  sphinx_extensions.py
morphologies/: BC4_Human_Munoz.asc  BasketCell.swc  GolgiCell.swc  Golgi_Human_1.swc  Golgi_Human_2.swc  GranuleCell.swc  PurkinjeCell.swc  README.rst  SC9_Human_Munoz.asc  basket_relabel.py  golgi_relabel.py  granule_relabel.py  morphologies.yaml  purkinje_relabel.py  stellate_relabel.py
test/: test_cell_models.py  test_cli.py  test_connectivity.py  test_glomerulus_golgi.py  test_glomerulus_granule.py  test_glomerulus_ubc.py  test_golgi_glomerulus.py  test_gran_layer.py  test_integrity.py  test_io_molecular.py  test_placement.py  test_plots.py  test_reporting.py  test_reports.py  test_spiking_results.py  test_structure_analysis.py  test_to_glomerulus.py
tests/: test_cell_models.py  test_glomerulus_golgi.py  test_glomerulus_granule.py  test_glomerulus_ubc.py  test_golgi_glomerulus.py  test_io_molecular.py  test_microzones.py  test_plots.py  test_reports.py  test_spiking_results.py  test_structure_analysis.py  test_to_glomerulus.py
(+156 files in other folders)
