[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cerebellum"
authors = [{ name = "Dimitri RODARIE", email = "dimitri.rodarie@cref.it" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "bsb[parallel,nest,neuron]~=4.4",
    "click~=8.1",
    "survey",
    "nestml~=7.0",
    "matplotlib~=3.9"
]

[project.optional-dependencies]
test = [
    "bsb-test~=4.2",
    "coverage~=7.3",
]
docs = [
    "sphinx~=7.0",
    "furo~=2023.9"
]
dev = [
    "cerebellum[test,docs]",
    "pre-commit~=3.5",
    "black~=24.1",
    "isort~=5.12",
    "bump-my-version~=0.21"
]

[project.urls]
Home = "https://github.com/dbbs-lab/cerebellum"
"Bug Tracker" = "https://github.com/dbbs-lab/cerebellum/issues/"
"Source Code" = "https://github.com/dbbs-lab/cerebellum/"

[project.scripts]
cerebellum = "cerebellum.cli:app"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
known_third_party = ["nest"]

[project.entry-points."bsb.components"]
my_components = "cerebellum:classmap"

[tool.bumpversion]
current_version = "0.5.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.bumpversion.parts.pre_l]
values = ["dev", "a", "b", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "cerebellum/__init__.py"

[[tool.bumpversion.files]]
filename = "configurations/mouse/mouse_cerebellar_cortex.yaml"
search = 'cerebellum~={current_version}'
replace = 'cerebellum~={new_version}'

